@@ -3,7 +3,7 @@
 
 include "/home/raabe/.gtkrc-2.0.mine"
 gtk-theme-name="Breeze-Dark"
-gtk-icon-theme-name="breeze-dark"
+gtk-icon-theme-name="kora"
 gtk-font-name="Cantarell 11"
 gtk-cursor-theme-name="Bibata-Modern-Classic"
 gtk-cursor-theme-size=0
