@@ -1,6 +1,6 @@
 [Settings]
-gtk-theme-name=Breeze-Dark
-gtk-icon-theme-name=breeze-dark
+gtk-theme-name=kora
+gtk-icon-theme-name=kora
 gtk-font-name=Cantarell 11
 gtk-cursor-theme-name="Bibata-Modern-Classic"
 gtk-cursor-theme-size=0
