@@ -1,7 +1,13 @@
 Version 2.3
-https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.2
+https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.3
 --------------------------------------------------------
+Waybar: Add numbers to workspaces
 Screenshots: Add swappy
+Icons: Changed to Kora Icon Theme
+Rofi: New Layout featuring current wallpaper as a background
+Cliphist: Added to the toolbar
+Rofi: Add layout for cliphist
+
 
 Version 2.2
 https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.2
